# directx-rs

./: .editorconfig  Cargo.toml  README.md  appveyor.yml
common/: Cargo.toml
common/src/: lib.rs  object.rs
direct2d/: Cargo.toml  README.md
direct2d/src/: lib.rs
direct3d/: Cargo.toml  README.md
direct3d/examples/: simple.rs
direct3d/src/: device.rs  lib.rs  render_target_view.rs
dxgi/: Cargo.toml  README.md
dxgi/src/: adapter.rs  factory.rs  lib.rs  swap_chain.rs
src/: lib.rs  macros.rs
