[package]
name = "common"
version = "0.1.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
publish = false

[target.'cfg(windows)'.dependencies]
comptr = { git = "https://github.com/GabrielMajeri/comptr-rs" }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
	"winerror",
	"dxgi1_5",
	"d3d11",
	"d2d1_2"
]

[workspace]
members = [
	"dxgi",
	"direct3d",
	"direct2d"
]
